--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Shivam Goyal| Frontend Developer</title>
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/shivamcreator/folio/main/images/sg-logo.png?token=GHSAT0AAAAAABVVW237ADD47WVUVU47DOG4YVLHLJQ">
+    <link rel="icon" type="image/x-icon" href="https://github.com/shivamcreator/folio/blob/main/images/sg-logo.png?raw=true">
     <link rel="icon" type="image/x-icon" href="logo.img">
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,7 +14,7 @@
         <header id="header">
             <div class="header-wrapper">
                 <span class="logo">
-                    <img src="https://raw.githubusercontent.com/shivamcreator/folio/main/images/sg-logo.png?token=GHSAT0AAAAAABVVW237ADD47WVUVU47DOG4YVLHLJQ" />
+                    <img src="https://github.com/shivamcreator/folio/blob/main/images/sg-logo.png?raw=true" />
                 </span>
                 <nav>
                     <ul id="header-ul" class="header-ul white small">
@@ -60,7 +60,7 @@
                     <div class="section-right">
                         <center>
                             <div id="bitmoji-wrapper">
-                                <img class="img-wrapper" src="https://raw.githubusercontent.com/shivamcreator/folio/main/images/bitmoji.png?token=GHSAT0AAAAAABVVW2366VWKTDI7CTQHBNDCYVLHMCQ" />
+                                <img class="img-wrapper" src="https://github.com/shivamcreator/folio/blob/main/images/bitmoji.png?raw=true" />
 
                             </div>
                         </center>
