--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <div class="footer-left">
                     <div class="logo-me">
                         <a target="_blank"  href="">
-                            <img src="https://raw.githubusercontent.com/shivamcreator/folio/main/images/sg-logo.png?token=GHSAT0AAAAAABVVW237HB656TLMLLO4LWZGYVLB5WQ" alt="">
+                            <img src="https://github.com/shivamcreator/folio/blob/main/images/sg-logo.png?raw=true" alt="">
                         </a>
                     </div>
                 </div>
