--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Shivam Goyal| Frontend Developer</title>
-    <link rel="icon" type="image/x-icon" href="https://github.com/shivamcreator/folio/blob/main/Sg-logo.png?raw=true">
+    <link rel="icon" type="image/x-icon" href="Sg-logo.png">
     <link rel="icon" type="image/x-icon" href="logo.img">
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,7 +14,7 @@
         <header id="header">
             <div class="header-wrapper">
                 <span class="logo">
-                    <img src="https://github.com/shivamcreator/folio/blob/main/Sg-logo.png?raw=true" />
+                    <img src="Sg-logo.png" />
                 </span>
                 <nav>
                     <ul id="header-ul" class="header-ul white small">
@@ -60,7 +60,7 @@
                     <div class="section-right">
                         <center>
                             <div id="bitmoji-wrapper">
-                                <img class="img-wrapper" src="https://github.com/shivamcreator/folio/blob/main/Bitmoji.png?raw=true" />
+                                <img class="img-wrapper" src="Bitmoji.png" />
 
                             </div>
                         </center>
