--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Shivam Goyal| Frontend Developer</title>
     <link rel="icon" type="image/x-icon" href="Sg-logo.png">
     <link rel="icon" type="image/x-icon" href="logo.img">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?v=20220802" />
 </head>
 <body>
     <div id="container page">
