--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header id="header">
             <div class="header-wrapper">
                 <span class="logo">
-                    <img src="Img\Sg-logo.png" />
+                    <img src="Sg-logo.png" />
                 </span>
                 <nav>
                     <ul id="header-ul" class="header-ul white small">
@@ -62,7 +62,7 @@
                     <div class="section-right">
                         <center>
                             <div id="bitmoji-wrapper">
-                                <img class="img-wrapper" src="Img\Bitmoji.png" />
+                                <img class="img-wrapper" src="Bitmoji.png" />
 
                             </div>
                         </center>
@@ -240,7 +240,7 @@
                 <div class="footer-left">
                     <div class="logo-me">
                         <a target="_blank"  href="">
-                            <img src="Img\Sg-logo.png" alt="">
+                            <img src="Sg-logo.png" alt="">
                         </a>
                     </div>
                 </div>
