--- a/index.html
+++ b/index.html
@@ -84,8 +84,15 @@
                         <div class="text intro-text">
                             <p class=" small white intro-text">I’m Shivam Goyal, a professional and talented Software Developer with front-end development skills and good problem-solving skills. </p>
                             <p class="text black small intro-text">
-                                I develop websites with HTML, CSS, and JavaScript. And I have created some projects using React also. I love to do Data Structure in my free time.
-                                I like to learn a lot of new skills and experiment with code!
+                               Meticulous Frontend developer with 1+ year of experience and passion for responsive website design and a firm
+believer in the mobile-first approach. I am looking for a challenging, satisfying and well-remunerative career in the
+field of technology that would make full use of my academic skills and demand me to refine my existing skills and
+pick up a few more.<ul>
+<li>Frontend Developer with professional experience in Web Designing and User Interface Development.</li>
+<li>Tech stack: HTML, CSS , Bootstrap, JavaScript, jQuery, React.js ,Java.</li>
+<li>Strong experience with Cross Browser Compatibility issues and Optimization for the web.</li>
+<li>Experts in responsive Web Design and analyzing and fixing Ul bugs quickly.</li>
+                            <li>Proficiency in code optimization to improve performance.</li></ul>
                                 For more you can downaload my resume!
                             </p>
                             <p class="text black small intro-text">That's all about me. And I would love to hear your story :) </p>
